added avatars and fixed the gender selection

--- a/backend/package.json
+++ b/backend/package.json
@@ -6,6 +6,14 @@
   "scripts": {
     "start": "node socket-server.js",
     "start:engage": "node engage-server.js",
+    "start:engage:refactored": "node engage-server-refactored.js",
+    "dev:engage": "nodemon engage-server.js",
+    "dev:engage:refactored": "nodemon engage-server-refactored.js",
+    "pm2:start": "pm2 start ecosystem.config.js",
+    "pm2:stop": "pm2 stop engage-server",
+    "pm2:restart": "pm2 restart engage-server",
+    "pm2:logs": "pm2 logs engage-server",
+    "pm2:delete": "pm2 delete engage-server",
     "start:no-redis": "node socket-server-no-redis.js",
     "start:old": "node socketio-skip-on-server.js",
     "dev": "nodemon socket-server.js",
