added avatars and fixed the gender selection

--- a/FIREBASE_SECURITY_RULES.json
+++ b/FIREBASE_SECURITY_RULES.json
@@ -31,6 +31,23 @@
           ".write": true
         }
       }
+    },
+    "watchAlongRooms": {
+      "$roomId": {
+        // Allow read/write for Watch Along rooms
+        // For development: open access (will be restricted in production)
+        ".read": true,
+        ".write": true,
+        
+        "messages": {
+          ".read": true,
+          "$messageId": {
+            ".write": true,
+            // Validate message structure
+            ".validate": "newData.hasChildren(['senderId', 'text', 'timestamp']) && newData.child('text').isString() && newData.child('text').val().length > 0 && newData.child('text').val().length <= 500"
+          }
+        }
+      }
     }
   }
 }
