--- a/backend/package.json
+++ b/backend/package.json
@@ -28,6 +28,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@socket.io/redis-adapter": "^8.3.0",
     "chess.js": "^1.4.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
