--- a/frontend/app.json
+++ b/frontend/app.json
@@ -57,8 +57,8 @@
       "typedRoutes": true
     },
     "extra": {
-      "EXPO_PUBLIC_BACKEND_URL": "http://localhost:3001",
-      "EXPO_PUBLIC_SOCKETIO_URL": "http://localhost:3003",
+      "EXPO_PUBLIC_BACKEND_URL": "http://172.20.139.243:3001",
+      "EXPO_PUBLIC_SOCKETIO_URL": "http://172.20.139.243:3003",
       "EXPO_PUBLIC_FIREBASE_API_KEY": "AIzaSyDBo7cnGRmuDa-zT2wV413pwSpY5HbZnVI",
       "EXPO_PUBLIC_FIREBASE_AUTH_DOMAIN": "gingr-13c0c.firebaseapp.com",
       "EXPO_PUBLIC_FIREBASE_PROJECT_ID": "gingr-13c0c",
